<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gerson.appanimais.CadastroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNomeAnimal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintNomeAnimal"
        android:id="@+id/etNomeAnimal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#00f"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtIdadeAnimal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintIdadeAnimal"
        android:id="@+id/etIdade"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#00f"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCategoria"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spCadastro">

    </Spinner>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#00f"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSalvar"
        android:id="@+id/btnSalvarCadastro"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
